--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
   <header class="navigation fixed-top"> <!-- .navigation.nav-bg PARA CAMBIAR -->
     <nav class="navbar navbar-expand-lg navbar-dark">
-      <a class="navbar-brand font-tertiary h3" href="index.html"><img src="/img/arg-programa.png"
+      <a class="navbar-brand font-tertiary h3" href="index.html"><img src="img/arg-programa.png"
           alt="Argentina Programa" width="50" height="40"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation"
         aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
@@ -123,7 +123,7 @@
       <div class="row">
         <div class="col-md-4 text-center drag-lg-top">
           <div class="shadow-down mb-4">
-            <img src="/img/FotoPerfil.webp" class="img-fluid w-100 rounded-lg border-thick border-white"
+            <img src="img/FotoPerfil.webp" class="img-fluid w-100 rounded-lg border-thick border-white"
               alt="Foto Perfil" class="w-100" class="rounded-lg" class="border-thick" class="border-white">
           </div>
           <h4>Full Stack Developer Jr</h4>
@@ -159,13 +159,13 @@
           <h6 class="text-light">WEBEX</h6>
         </div>
         <div class="col-lg-3 col-md-4 text-center">
-          <img src="/img/Logo sibilia.png" alt="icon" class="logo-experiencia">
+          <img src="img/Logo sibilia.png" alt="Foto Sibilia" class="logo-experiencia">
           <p class="mb-0">Mayo 2016 - Febrero 2019</p>
           <h4>Studio Sibilia</h4>
           <h6 class="text-light">Operaria en sección de color en línea de producción de joyería de diseño.</h6>
         </div>
         <div class="col-lg-3 col-md-4 text-center">
-          <img src="/img/bsas ciudad logo vert_web.jpg" alt="icon" class="logo-experiencia">
+          <img src="img/bsas ciudad logo vert_web.jpg" alt="Gob. Ciudad" class="logo-experiencia">
           <p class="mb-0">Febrero 2019 - Presente</p>
           <h4>Docente de Tecnología</h4>
           <h6 class="text-light">Docente para el Gob. de la Ciudad en el área de primaria.</h6>
@@ -185,7 +185,7 @@
         <div class="col-lg-6 col-md-6 mb-80">
           <div class="d-flex">
             <div class="mr-lg-5 mr-3">
-              <img src="/img/logo ifts.png" alt="icon" class="edu-logo">
+              <img src="img/logo ifts.png" alt="icon" class="edu-logo">
             </div>
             <div>
               <p class="text-dark mb-1">2022 - Presente</p>
@@ -197,7 +197,7 @@
         <div class="col-lg-6 col-md-6 mb-80">
           <div class="d-flex">
             <div class="mr-lg-5 mr-3">
-              <img src="/img/arg-programa.png" alt="icon" class="edu-logo">
+              <img src="img/arg-programa.png" alt="icon" class="edu-logo">
             </div>
             <div>
               <p class="text-dark mb-1">2022</p>
@@ -209,7 +209,7 @@
         <div class="col-lg-6 col-md-6 mb-80">
           <div class="d-flex">
             <div class="mr-lg-5 mr-3">
-              <img src="/img/egg logo.png" alt="icon" class="edu-logo">
+              <img src="img/egg logo.png" alt="icon" class="edu-logo">
             </div>
             <div>
               <p class="text-dark mb-1">2022</p>
@@ -221,7 +221,7 @@
         <div class="col-lg-6 col-md-6 mb-80">
           <div class="d-flex">
             <div class="mr-lg-5 mr-3">
-              <img src="/img/fader logo.jfif" alt="icon" class="edu-logo">
+              <img src="img/fader logo.jfif" alt="icon" class="edu-logo">
             </div>
             <div>
               <p class="text-dark mb-1">2009 - 2014</p>
