--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         <div class="col-lg-12 text-center">
           <h2 class="section-title">Experiencia Laboral</h2>
         </div>
-        <div class="col-lg-3 col-md-4 text-center experiencia">
+        <div class="col-lg-3 col-md-4 text-center">
           <img src="images/experiencia/icon-3.png" alt="icon">
           <p class="mb-0">Jan 2007 - Feb 2009</p>
           <h4>Junior UX Designer</h4>
