Redes sociales en el footer, cambio en el texto de la sección Sobre Mi

--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@
     </div>
     <!-- social icon -->
     <ul class="list-unstyled ml-5 mt-3 position-relative zindex-1">
-      <li class="mb-3"><a class="text-white" href="https://themefisher.com/"><i class="ti-linkedin"></i></a></li>
-      <li class="mb-3"><a class="text-white" href="https://themefisher.com/"><i class="ti-instagram"></i></a></li>
-      <li class="mb-3"><a class="text-white" href="https://themefisher.com/"><i class="ti-github"></i></a></li>
+      <li class="mb-3"><a class="text-white" href="https://www.linkedin.com/in/laura-p%C3%A1jaro-0b2b65230/"><i class="ti-linkedin"></i></a></li>
+      <li class="mb-3"><a class="text-white" href="https://www.instagram.com/suficiencia.renal/"><i class="ti-instagram"></i></a></li>
+      <li class="mb-3"><a class="text-white" href="https://github.com/LauraPajaro"><i class="ti-github"></i></a></li>
     </ul>
     <!-- /social icon -->
   </section>
@@ -134,8 +134,9 @@
           </div>
           <p>Soy estudiante de Ciencia de Datos e I.A. Me considero una persona responsable y ordenada.
             Actualmente estoy buscando mi primera experiencia laboral en el rubro I.T.</p>
-          <p>He trabajado en distintos ámbitos cómo educación y tallerista en joyas de diseño. Tanto en mi vida personal
-            como laboral me identifico por la planificación y organización del tiempo y espacio de trabajo.</p>
+          <p>He trabajado en distintos ámbitos cómo educación y tallerista en joyas de diseño. 
+            Recientemente completé varios cursos que me permitieron adentrarme en el mundo I.T.: desde el desarrollo de páginas web, 
+            lógica de programación, como también, sobre lenguajes específicos como Python.</p>
           <p>Deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem
             accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
             architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia.</p>
@@ -154,7 +155,7 @@
         </div>
         <div class="col-lg-3 col-md-4 text-center">
           <img src="images/experiencia/icon-3.png" alt="icon">
-          <p class="mb-0">Jan 2007 - Feb 2009</p>
+          <p class="mb-0">2022 - Presente</p>
           <h4>Junior UX Designer</h4>
           <h6 class="text-light">WEBEX</h6>
         </div>
@@ -547,6 +548,14 @@
             <p class="text-white paragraph-lg font-secondary">Villa Crespo, Ciudad de Buenos Aires, Argentina</p>
           </div>
         </div>
+            <!-- social icon -->
+        <div class="row ml-5 mt-3 justify-content-center">
+            <div class="mb-3 col-md-1"><a class="text-white" href="https://www.linkedin.com/in/laura-p%C3%A1jaro-0b2b65230/"><i class="ti-linkedin"></i></a></div>
+            <div class="mb-3 col-md-1"><a class="text-white" href="https://www.instagram.com/suficiencia.renal/"><i class="ti-instagram"></i></a></div>
+            <div class="mb-3 col-md-1"><a class="text-white" href="https://github.com/LauraPajaro"><i class="ti-github"></i></a></div>
+
+        </div>
+        <!-- /social icon -->
       </div>
     </div>
     <div class="border-top text-center border-dark py-5">
