Cambio en el texto de la sección Sobre mi usando I.A.

--- a/index.html
+++ b/index.html
@@ -132,14 +132,15 @@
           <div class="col-12">
             <h2 class="text-pink font-tertiary">Sobre Mi</h1>
           </div>
-          <p>Soy estudiante de Ciencia de Datos e I.A. Me considero una persona responsable y ordenada.
-            Actualmente estoy buscando mi primera experiencia laboral en el rubro I.T.</p>
-          <p>He trabajado en distintos ámbitos cómo educación y tallerista en joyas de diseño. 
-            Recientemente completé varios cursos que me permitieron adentrarme en el mundo I.T.: desde el desarrollo de páginas web, 
-            lógica de programación, como también, sobre lenguajes específicos como Python.</p>
-          <p>Deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem
-            accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
-            architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia.</p>
+          <p>Soy estudiante de Ciencia de Datos e I.A. con conocimientos en programación y desarrollo web.
+            Busco mi primer trabajo como programadora para aplicar mis conocimientos y habilidades en un entorno laboral.</p>
+          <p>Recientemente completé varios cursos que me permitieron adentrarme en el mundo I.T.: desde el desarrollo de páginas web, 
+            lógica de programación, como también, sobre lenguajes específicos como Python y he adquirido conocimientos en diversos
+            temas relacionados con la informática. 
+            Aunque aún no tengo experiencia laboral en el campo de la informática, estoy altamente motivada y comprometida.
+            Tengo una actitud proactiva para resolver problemas y enfrentar desafíos, y me encanta aprender cosas nuevas.</p>
+          <p>Si bien he conseguido conocimientos variados de programación y todaviá me falta mucho por conocer, 
+            mi sueño es trabajar con bases de datos y realizar análisis de datos</p>
         </div>
       </div>
     </div>
